# LO21

./: BaseConnaissance.c  BaseFait.c  baseConnaisance.h  baseConnaissance.h  instructions.txt  interface.c  interface.h  interface2.c  main.c  regle.c  regle.h  supprimer  test
lo21/: BaseConnaisance.c  BaseFait.h  CMakeLists.txt  TEST.c  TEST.h  baseConnaissance.h  interface.c  interface.h  interface2.c  main.c  regle.c  regle.h
projetlo21/: CMakeLists.txt  main.c
projetlo21/projetlo21/: main.c
test2lo21/: CMakeLists.txt  main.c
